--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       padding: 0;
       font-family: 'Orbitron', sans-serif;
       overflow-x: hidden;
-      background: url('https://cdn.discordapp.com/attachments/855567929458556988/1361975356227190885/860DDB67-380F-4038-9EDB-7CCBD28B1A12.png?ex=6800b5e5&is=67ff6465&hm=9bc681f4ed48845aa98651a1ef0e94a32ad6f94a9607fd0e55cf3cb55e982cfc&') center center/cover no-repeat fixed;
+      background: url('https://media.giphy.com/media/tIeCLkB8geYtW/giphy.gif') center center/cover no-repeat fixed;
       scroll-behavior: smooth;
       background-color: var(--bg-color);
       color: var(--text-color);
@@ -48,6 +48,7 @@
       font-size: 2.5rem;
       text-shadow: 0 0 10px #fff;
       margin: 0;
+      text-align: center; /* Center the main title */
     }
     section {
       padding: 40px 20px;
@@ -61,6 +62,7 @@
       margin-bottom: 30px;
       color: #f1c40f;
       text-shadow: 0 0 8px #fff;
+      text-align: center; /* Center the section titles */
     }
     .shop {
       max-width: 1000px;
@@ -80,7 +82,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      text-align: center; /* This line centers the text */
+      text-align: center; /* Center the text */
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
     .item:hover {
@@ -121,9 +123,11 @@
     footer {
       margin: 50px 0 20px;
       font-size: 0.9rem;
+      text-align: center; /* Center footer text */
     }
     .links {
       margin-top: 30px;
+      text-align: center; /* Center the links */
     }
     .links a {
       color: #f1c40f;
@@ -175,7 +179,7 @@
 <body data-theme="dark">
   <div class="dark-toggle" onclick="toggleTheme()">Toggle Theme</div>
   <header>
-    <img src="https://cdn.discordapp.com/attachments/855567929458556988/1361972566289289297/image_2025-04-16_035222854-removebg-preview.png?ex=6800b34c&is=67ff61cc&hm=e66cb075c0cec49e2ab800be8c7268b8594ca8dd972b9aabc4ce3668e2f86c8e&">
+    <img src="https://cdn.discordapp.com/icons/1226671221406607461/a_1c7e17cb8f3c7f6bb6c37b22e1fbc8b3.gif?size=240" alt="Server Logo">
     <h1>Perks Shop</h1>
   </header>
 
