--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       padding: 0;
       font-family: 'Orbitron', sans-serif;
       overflow-x: hidden;
-      background: url('https://media.giphy.com/media/tIeCLkB8geYtW/giphy.gif') center center/cover no-repeat fixed;
+      background: url('https://cdn.discordapp.com/attachments/855567929458556988/1361975356227190885/860DDB67-380F-4038-9EDB-7CCBD28B1A12.png?ex=6800b5e5&is=67ff6465&hm=9bc681f4ed48845aa98651a1ef0e94a32ad6f94a9607fd0e55cf3cb55e982cfc&') center center/cover no-repeat fixed;
       scroll-behavior: smooth;
       background-color: var(--bg-color);
       color: var(--text-color);
@@ -179,7 +179,7 @@
 <body data-theme="dark">
   <div class="dark-toggle" onclick="toggleTheme()">Toggle Theme</div>
   <header>
-    <img src="https://cdn.discordapp.com/icons/1226671221406607461/a_1c7e17cb8f3c7f6bb6c37b22e1fbc8b3.gif?size=240" alt="Server Logo">
+    <img src="https://cdn.discordapp.com/attachments/855567929458556988/1361972566289289297/image_2025-04-16_035222854-removebg-preview.png?ex=6800b34c&is=67ff61cc&hm=e66cb075c0cec49e2ab800be8c7268b8594ca8dd972b9aabc4ce3668e2f86c8e&">
     <h1>Perks Shop</h1>
   </header>
 
