--- a/index.html
+++ b/index.html
@@ -178,12 +178,46 @@
       font-size: 1.2rem;
       color: var(--highlight-color);
     }
+    /* Mobile Optimization */
+    @media (max-width: 768px) {
+      .shop {
+        flex-direction: column;
+        align-items: center;
+      }
+      .item {
+        width: 90%; /* Make items take up more width on small screens */
+      }
+      header h1 {
+        font-size: 2rem; /* Adjust header size */
+      }
+      h2.section-title {
+        font-size: 1.5rem; /* Adjust section title size */
+      }
+    }
+    /* Sticky Bottom Navigation */
+    .bottom-nav {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: var(--item-bg);
+      display: flex;
+      justify-content: space-around;
+      padding: 10px 0;
+      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.5);
+      z-index: 1000;
+    }
+    .bottom-nav a {
+      color: var(--highlight-color);
+      text-decoration: none;
+      font-size: 1.1rem;
+    }
   </style>
 </head>
 <body data-theme="dark">
   <div class="dark-toggle" onclick="toggleTheme()">Toggle Theme</div>
   <header>
-    <img src="https://cdn.discordapp.com/attachments/855567929458556988/1361972566289289297/image_2025-04-16_035222854-removebg-preview.png?ex=6800b34c&is=67ff61cc&hm=e66cb075c0cec49e2ab800be8c7268b8594ca8dd972b9aabc4ce3668e2f86c8e&">
+    <img src="https://cdn.discordapp.com/attachments/855567929458556988/1361972566289289297/image_2025-04-16_035222854-removebg-preview.png?ex=68015c0c&is=68000a8c&hm=f397126d98840a6709f7b5e0470ea8d189d4fa78b0132c7966cc904aa3c732bd&">
     <h1>Perks Shop</h1>
   </header>
 
@@ -242,6 +276,12 @@
       <h2>Privacy Policy</h2>
       <p>Your data is only used to provide and manage your purchased perks. We do not share or sell your data. By using our service, you consent to this privacy policy. For any concerns, reach out via our support server.</p>
     </div>
+  </div>
+
+  <div class="bottom-nav">
+    <a href="#power">Power</a>
+    <a href="#ability">Ability</a>
+    <a href="#support">Support</a>
   </div>
 
   <script>
