--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       background: var(--item-bg);
       border: 1px solid var(--highlight-color);
       border-radius: 10px;
-      padding: 30px;
+      padding: 20px; /* Reduced padding for better fit */
       width: 300px;
       box-shadow: 0 4px 25px rgba(255, 215, 0, 0.5); /* Gold shadow */
       display: flex;
@@ -186,6 +186,7 @@
       }
       .item {
         width: 90%; /* Make items take up more width on small screens */
+        padding: 15px; /* Further reduce padding */
       }
       header h1 {
         font-size: 2rem; /* Adjust header size */
@@ -193,24 +194,12 @@
       h2.section-title {
         font-size: 1.5rem; /* Adjust section title size */
       }
-    }
-    /* Sticky Bottom Navigation */
-    .bottom-nav {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background: var(--item-bg);
-      display: flex;
-      justify-content: space-around;
-      padding: 10px 0;
-      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.5);
-      z-index: 1000;
-    }
-    .bottom-nav a {
-      color: var(--highlight-color);
-      text-decoration: none;
-      font-size: 1.1rem;
+      .item h3 {
+        font-size: 1.3rem; /* Adjust item title size */
+      }
+      .item p {
+        font-size: 1rem; /* Adjust item description size */
+      }
     }
   </style>
 </head>
@@ -276,12 +265,6 @@
       <h2>Privacy Policy</h2>
       <p>Your data is only used to provide and manage your purchased perks. We do not share or sell your data. By using our service, you consent to this privacy policy. For any concerns, reach out via our support server.</p>
     </div>
-  </div>
-
-  <div class="bottom-nav">
-    <a href="#power">Power</a>
-    <a href="#ability">Ability</a>
-    <a href="#support">Support</a>
   </div>
 
   <script>
