--- a/index.html
+++ b/index.html
@@ -213,7 +213,12 @@
   <section id="power">
     <h2 class="section-title">Power Perks</h2>
     <div class="shop">
-      <div class="item"><h3>VC Mod</h3><p>$15/month</p><button class="buy-btn">Subscribe</button></div>
+      <div class="item">
+        <h3>VC Mod</h3>
+        <p>$15/month</p>
+        <button class="buy-btn">Subscribe</button>
+        <div id="paypal-button-container-P-0TK23372HF1739735NAAKFDY"></div>
+      </div>
       <div class="item"><h3>Mod</h3><p>$30/month</p><button class="buy-btn">Subscribe</button></div>
       <div class="item"><h3>Senior Mod</h3><p>$60/month</p><button class="buy-btn">Subscribe</button></div>
       <div class="item"><h3>Co-Owner</h3><p>$960/month</p><button class="buy-btn">Subscribe</button></div>
@@ -281,6 +286,28 @@
     function updateDonationAmount(value) {
       document.getElementById('donationAmount').textContent = `$${value}`;
     }
+  </script>
+
+  <div id="paypal-button-container-P-0TK23372HF1739735NAAKFDY"></div>
+  <script src="https://www.paypal.com/sdk/js?client-id=AT4atw1RothjUUBfkPZeYSRSsPjnVeTs9m5njOraRZGpMh2ZnfCbT5QstG1kSk0RPs5kJjn9sUBS7X2Q&vault=true&intent=subscription" data-sdk-integration-source="button-factory"></script>
+  <script>
+    paypal.Buttons({
+        style: {
+            shape: 'pill',
+            color: 'gold',
+            layout: 'vertical',
+            label: 'subscribe'
+        },
+        createSubscription: function(data, actions) {
+          return actions.subscription.create({
+            /* Creates the subscription */
+            plan_id: 'P-0TK23372HF1739735NAAKFDY'
+          });
+        },
+        onApprove: function(data, actions) {
+          alert(data.subscriptionID); // You can add optional success message for the subscriber here
+        }
+    }).render('#paypal-button-container-P-0TK23372HF1739735NAAKFDY'); // Renders the PayPal button
   </script>
 </body>
 </html>
