--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       --text-color: #fff; /* White text */
       --highlight-color: gold; /* Gold for highlights */
       --neon-silver: #C0C0C0; /* Neon silver color */
+      --light-neon-silver: #A0A0A0; /* Light mode neon silver color */
     }
     [data-theme="dark"] {
       --bg-color: #000;
@@ -20,6 +21,7 @@
       --text-color: #fff;
       --highlight-color: gold;
       --neon-silver: #C0C0C0;
+      --light-neon-silver: #A0A0A0;
     }
     [data-theme="light"] {
       --bg-color: #fff; /* White background */
@@ -27,6 +29,7 @@
       --text-color: #000; /* Black text */
       --highlight-color: gold; /* Gold for highlights */
       --neon-silver: #C0C0C0; /* Neon silver color */
+      --light-neon-silver: #555; /* Darker silver for light mode */
     }
     html, body {
       margin: 0;
