--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 <body data-theme="dark">
   <div class="dark-toggle" onclick="toggleTheme()">Toggle Theme</div>
   <header>
-    <img src="https://cdn.discordapp.com/icons/1226671221406607461/a_1c7e17cb8f3c7f6bb6c37b22e1fbc8b3.gif?size=240" alt="Server Logo">
+    <img src="https://cdn.discordapp.com/attachments/855567929458556988/1361972566289289297/image_2025-04-16_035222854-removebg-preview.png?ex=680204cc&is=6800b34c&hm=d4a489e230e6bc8af27d62def7ce837db40cf62320e18582ce390f0e64291415&">
     <h1>Perks Shop</h1>
   </header>
 
