--- a/index.html
+++ b/index.html
@@ -69,12 +69,15 @@
     h2.section-title {
       font-size: 2rem;
       margin-bottom: 30px;
-      color: var(--highlight-color);
-      text-shadow: 0 0 8px var(--highlight-color);
       text-align: center; /* Center the section titles */
     }
+    #power h2.section-title {
+      color: #102F82; /* Power Perks title color */
+      text-shadow: 0 0 8px #102F82, 0 0 20px #102F82; /* Neon effect */
+    }
     #ability h2.section-title {
-      color: var(--neon-gold); /* Change Ability Perks title to neon gold in light mode */
+      color: #459AD8; /* Ability Perks title color */
+      text-shadow: 0 0 8px #459AD8, 0 0 20px #459AD8; /* Neon effect */
     }
     #ability .item h3 {
       color: var(--text-color); /* Change Ability Perks item titles to text color */
