--- a/index.html
+++ b/index.html
@@ -193,6 +193,34 @@
       font-size: 1.2rem;
       color: var(--highlight-color);
     }
+    /* Slider styles */
+    input[type="range"] {
+      -webkit-appearance: none;
+      width: 100%;
+      height: 8px; /* Height of the slider track */
+      background: #ddd; /* Track color */
+      border-radius: 5px; /* Rounded track */
+      outline: none; /* Remove outline */
+    }
+
+    input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none; /* Remove default styling */
+      appearance: none; /* Remove default styling */
+      width: 20px; /* Width of the slider thumb */
+      height: 20px; /* Height of the slider thumb */
+      border-radius: 50%; /* Make thumb circular */
+      background: gold; /* Thumb color */
+      cursor: pointer; /* Pointer cursor on hover */
+    }
+
+    input[type="range"]::-moz-range-thumb {
+      width: 20px; /* Width of the slider thumb */
+      height: 20px; /* Height of the slider thumb */
+      border-radius: 50%; /* Make thumb circular */
+      background: gold; /* Thumb color */
+      cursor: pointer; /* Pointer cursor on hover */
+    }
+
     /* Mobile Optimization */
     @media (max-width: 768px) {
       .shop {
