--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
       </div>
       <div class="item"><h3>Mod</h3><p>$30/month</p><div id="paypal-button-container-P-0TK23372HF1739735NAAKFDY-2"></div></div>
       <div class="item"><h3>Senior Mod</h3><p>$60/month</p><div id="paypal-button-container-P-0TK23372HF1739735NAAKFDY-3"></div></div>
-      <div class="item"><h3>Co-Owner</h3><p>$960/month</p><div id="paypal-button-container-P-0TK23372HF1739735NAAKFDY-4"></div></div>
+      <div class="item"><h3>Head-Administrator</h3><p>$300/month</p><div id="paypal-button-container-P-0TK23372HF1739735NAAKFDY-4"></div></div>
     </div>
   </section>
 
